Sketch talk structure

--- a/DHarries_bayesian_naturalness.tex
+++ b/DHarries_bayesian_naturalness.tex
@@ -48,4 +48,115 @@
   \titlepage
 \end{frame}
 
+\section{Naturalness Measures}
+
+\begin{frame}
+  \frametitle{Naturalness Problems}
+  % - what are they
+  % - examples of naturalness problems in HEP
+  % (cosmological constant, strong-CP, ...)
+  % - main focus of this talk: hierarchy problem
+\end{frame}
+
+\begin{frame}
+  \frametitle{Quantifying Fine-tuning}
+  % - claim these are problems, how do we quantify
+  % - if want to use as a guide to model building/discrimination,
+  %   need to be able to compare
+  % - traditionally: propose measures that capture some quantity
+  %   that can be mapped into naturalness
+\end{frame}
+
+\begin{frame}
+  \frametitle{Traditional Tuning Measures}
+  % - summarise relevant traditional measures and motivation of
+  %   each
+  % - BG measure
+  % - EW measure
+  % - shortcomings of traditional measures
+\end{frame}
+
+\section{Bayesian Naturalness}
+
+\begin{frame}
+  \frametitle{A Bayesian Approach}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Naturalness Priors}
+  % - show derivation of naturalness priors
+  % - introduce definition of \Delta_J
+  % - summarise merits
+\end{frame}
+
+\begin{frame}
+  \frametitle{Example: the SM Hierarchy Problem}
+  \begin{columns}[t]
+    \begin{column}{0.5\textwidth}
+      \begin{figure}
+        \includegraphics[width=0.9\textwidth]{SM_Lambda}
+      \end{figure}
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      \begin{itemize} \itemsep1em
+      \item Toy model: $M_Z^2 = -\frac{\bar{g}^2}{8 \lambda} (\mu^2
+        + \Lambda^2)$
+      \item Traditional BG measure applied to, e.g., cut-off $\Lambda^2$,
+        \begin{equation*}
+          \Delta_{\Lambda^2} = \frac{\bar{g}^2}{8 \lambda}
+          \frac{\Lambda^2}{M_Z^2}
+        \end{equation*}
+        $\Rightarrow$ large tuning for $\Lambda^2 \gg M_Z^2$
+        \begin{itemize}
+        \item But interpretation unclear, e.g., large $\Delta_{\Lambda^2}$
+          $\equiv$ implausible? When is $\Delta_{\Lambda^2}$ too large?
+        \end{itemize}
+      \item Bayesian approach: posterior for $\Lambda^2$ conditioned on
+        observed $M_Z^2$, $m_h^2$
+      \item Computed in terms of effective ``naturalness prior''
+      \end{itemize}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\section{Results}
+
+\begin{frame}
+  \frametitle{Models Considered}
+  % - summarise models and methods
+\end{frame}
+
+\begin{frame}
+  \frametitle{Low Fine-tuning and Credible Regions}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Impact of $m_h \approx 125$ GeV}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Comparing Fine-tuning Measures}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Posterior Distributions}
+\end{frame}
+
+\section{Summary}
+
+\begin{frame}
+  \frametitle{Summary}
+\end{frame}
+
+\appendix
+
+\begin{frame}
+  \begin{center}
+    {
+      \Large
+      Additional Slides
+    }
+  \end{center}
+\end{frame}
+
 \end{document}
