Add slide comparing traditional measures with confidence intervals

--- a/DHarries_bayesian_naturalness.tex
+++ b/DHarries_bayesian_naturalness.tex
@@ -264,7 +264,7 @@
     \begin{column}{0.5\textwidth}
       \vspace{-15pt}
       \begin{center}
-        Toy model: $M_Z^2 = -\frac{\bar{g}^2}{8 \lambda} (\mu^2
+        Toy model $\Rightarrow$ $M_Z^2 = -\frac{\bar{g}^2}{8 \lambda} (\mu^2
         + \Lambda_{NP}^2)$
       \end{center}
       \vspace{-10pt}
@@ -362,6 +362,54 @@
 
 \begin{frame}
   \frametitle{Low Fine-tuning and Credible Regions}
+  \begin{columns}[t]
+    \begin{column}{0.7\textwidth}
+      \begin{columns}[t]
+        \begin{column}{0.5\textwidth}
+          \vspace{-35pt}
+          \begin{figure}
+            \centering
+            \includegraphics[width=0.8\textwidth]{CMSSM_BG_m0m12}
+          \end{figure}
+          \vspace{-20pt}
+          \begin{figure}
+            \centering
+            \includegraphics[height=0.7\textwidth]{CMSSM_pdf_mz_m0m12}
+          \end{figure}
+        \end{column}
+        \begin{column}{0.5\textwidth}
+          \vspace{-35pt}
+          \begin{figure}
+            \centering
+            \includegraphics[width=0.8\textwidth]{CNMSSM_BG_m0m12}
+          \end{figure}
+          \vspace{-20pt}
+          \begin{figure}
+            \centering
+            \includegraphics[height=0.7\textwidth]{CNMSSM_pdf_mz_m0m12}
+          \end{figure}
+        \end{column}
+      \end{columns}
+      \vspace{-12pt}
+      \begin{center}
+        \tiny [\href{http://arxiv.org/abs/1709.07895}{arXiv:1709.07895}]
+      \end{center}
+    \end{column}
+    \begin{column}{0.3\textwidth}
+      \vspace{-25pt}
+      \begin{figure}
+        \centering
+        \includegraphics[height=0.9\textwidth]{CNMSSM_mh}
+      \end{figure}
+      \vspace{-10pt}
+      \begin{itemize} \itemsep1em
+      \item High posterior density $\Leftrightarrow$ low fine-tuning
+        (according to $\Delta_{BG}$)
+      \item $m_{h_1} \approx 125$ GeV not required $\Rightarrow$
+        weak-scale soft parameters preferred
+      \end{itemize}
+    \end{column}
+  \end{columns}
 \end{frame}
 
 \begin{frame}
