Add summary slide

--- a/DHarries_bayesian_naturalness.tex
+++ b/DHarries_bayesian_naturalness.tex
@@ -572,7 +572,20 @@
 \begin{frame}
   \frametitle{Summary}
   \begin{itemize} \itemsep1em
-    \item 
+  \item Model comparison based on traditional tuning measures is
+    ill-defined
+  \item More relevant to ask which parameter values/models are
+    most plausible given observations $\Rightarrow$ utilitise Bayesian
+    methods
+  \item Bayesian approach automatically incorporates traditional
+    intuitions about fine-tuning
+  \item {\color{blue} Effective naturalness priors resemble traditional
+    measures but have a rigorous probabilistic interpretation}
+  \item Qualitative agreement between traditional measures and naturalness
+    priors, credible intervals in the CMSSM and semi-constrained NMSSM
+  \item In principle, can go further: have all ingredients to
+    compare model evidences $\Rightarrow$ {\color{blue} statistically
+      meanginful model comparisons}
   \end{itemize}
   \begin{center}
     \large Thank you for listening!
